examples/test/testpolicy9067.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9067
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key45: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value2
          key45: value16
      podSelector:
        matchLabels:
          key42: value5
          key15: value9
